--- a/style.css
+++ b/style.css
@@ -19,11 +19,24 @@ body {
     border: none;
 }
 
+.event-content {
+    line-height: 0.9;
+}
+
 .grid-container .sidenav {
     position: fixed;
 }
 
-
+.event-title {
+        /* text-indent: 50px; */
+        font-style: italic;
+        color: black;
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: 400;
+        font-size: 96px;
+        line-height: 1.1;
+        text-indent: .3;
+}
 
 
 .sidenav {
