--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
     border: none;
 }
 
-element.style {
+/* element.style {
     display: flex;
-}
+} */
 
 .landing-content {
     background-color: white;
