--- a/style.css
+++ b/style.css
@@ -24,11 +24,23 @@ body {
     font-family: sans-serif;
     font-weight: 400;
     font-size: 1em;
-    padding-top: 4em;
+    margin-top: 4em;
     text-transform: uppercase;
     min-width: 800px;
     
 }
+
+
+.sidenav:hover {
+    color: blueviolet; 
+
+}
+
+
+a {
+    color: inherit; 
+    text-decoration: inherit; /* no underline */
+  }
 
 .main {
     margin-top: 3.5em;
@@ -100,6 +112,13 @@ body {
     
 }
 
+.event-image-1 {
+    font-size: 12px;
+    max-width:500 ;
+    font-family: sans-serif;
+    
+}
+
 .event-1-body {
     display:flex;
     flex-flow: row;
@@ -112,6 +131,7 @@ body {
 width: 450px;
 font-family:sans-serif; 
 min-width: 200px;
+line-height: 1.4;
 /* text-transform: uppercase; */
 
 }
@@ -135,6 +155,13 @@ min-width: 200px;
     
 }
 
+.event-image-2 {
+    font-size: 12px;
+    max-width:500 ;
+    font-family: sans-serif;
+    
+}
+
 .event-2-body {
     display:flex;
     flex-flow: row;
@@ -145,6 +172,7 @@ min-width: 200px;
 
 .event-details-2 {
 width: 450px;
+line-height: 1.4;
 /* text-transform: uppercase; */
 }
 
@@ -164,6 +192,12 @@ width: 450px;
     padding-left: 4em;
 }
 
+.event-image-3 {
+    font-size: 12px;
+    max-width:500 ;
+    font-family: sans-serif;
+}
+
 .event-3-body {
     display:flex;
     flex-flow: row;
@@ -173,6 +207,7 @@ width: 450px;
 
 .event-details-3 {
 width: 450px;
+line-height: 1.4;
 /* text-transform: uppercase; */
 }
 
@@ -192,6 +227,12 @@ width: 450px;
     padding-left: 4em;
 }
 
+.event-image-4 {
+    font-size: 12px;
+    max-width:500 ;
+    font-family: sans-serif;
+}
+
 .event-4-body {
     display:flex;
     flex-flow: row;
@@ -201,6 +242,7 @@ width: 450px;
 
 .event-details-4 {
 width: 450px;
+line-height: 1.4;
 /* text-transform: uppercase; */
 }
 
@@ -220,6 +262,12 @@ width: 450px;
     padding-left: 4em;
 }
 
+.event-image-5 {
+    font-size: 12px;
+    max-width:500 ;
+    font-family: sans-serif;
+}
+
 .event-5-body {
     display:flex;
     flex-flow: row;
@@ -229,6 +277,7 @@ width: 450px;
 
 .event-details-5 {
 width: 450px;
+line-height: 1.4;
 /* text-transform: uppercase; */
 }
 
@@ -249,6 +298,12 @@ width: 450px;
     padding-left: 4em;
 }
 
+.event-image-6 {
+    font-size: 12px;
+    max-width:500 ;
+    font-family: sans-serif;
+}
+
 .event-6-body {
     display:flex;
     flex-flow: row;
@@ -258,6 +313,7 @@ width: 450px;
 
 .event-details-6 {
 width: 450px;
+line-height: 1.4;
 /* text-transform: uppercase; */
 }
 
